[gd_scene load_steps=2 format=3 uid="uid://cdlf25ug3csda"]

[ext_resource type="Script" uid="uid://c8krlxlgwfypd" path="res://Resources/UI/StatsBookUI.gd" id="1_b3de8"]

[node name="StatsBookUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b3de8")

[node name="BackgroundPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 500)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="BackgroundPanel/VBoxContainer"]
layout_mode = 2

[node name="StatsScroll" type="ScrollContainer" parent="BackgroundPanel/VBoxContainer"]
custom_minimum_size = Vector2(560, 380)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatsContent" type="VBoxContainer" parent="BackgroundPanel/VBoxContainer/StatsScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="BackgroundPanel"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -50.0
offset_right = 75.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
